--- a/CSS/codeup-design.css
+++ b/CSS/codeup-design.css
@@ -31,6 +31,32 @@ nav .nav-item {
     bottom: 6px;
 }
 
+.small-image{
+    width: 75px;
+    height: 75px;
+}
+.image-box{
+    width: 250px;
+    height: 250px;
+}
+.large-image{
+    width: 100%;
+    height: 75%;
+}
+.img-description{
+    display: flex;
+    justify-content: space-between;
+}
+.article{
+    display: flex;
+}
+
+
+
+
+
+
+
 @media screen and (min-width: 992px) {
     .sub-title {text-align: left;}
     hr {width: 100%;}
