--- a/CSS/codeup-design.css
+++ b/CSS/codeup-design.css
@@ -2,6 +2,11 @@ body {
     font-family: 'Abel', sans-serif;
     background: #f0f0f0;
 }
+.container{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
 
 .wrapper {
     max-width: 1100px;
@@ -36,8 +41,7 @@ nav .nav-item {
     height: 75px;
 }
 .image-box{
-    width: 250px;
-    height: 250px;
+    height: 50vh;
 }
 .large-image{
     width: 100%;
@@ -50,7 +54,27 @@ nav .nav-item {
 .article{
     display: flex;
 }
+.groupProject{
+    height: 50%;
+}
+.group1{
 
+}
+.group2{
+
+}
+.group3{
+
+}
+.group4{
+
+}
+.group5{
+
+}
+.group6{
+
+}
 
 
 
@@ -64,5 +88,8 @@ nav .nav-item {
     .brand-name  {
         position: relative;
         top: 5px;
+    }
+    .iconsAcrossTop{
+        display: flex;
     }
 }
