--- a/CSS/codeup-design.css
+++ b/CSS/codeup-design.css
@@ -7,7 +7,19 @@ body {
     flex-direction: column;
     justify-content: space-between;
 }
-
+h1, h2, h3{
+    font-family: 'Anton', sans-serif;
+    text-transform: uppercase;
+}
+h1{
+    font-size: 64px;
+}
+h2{
+    font-size: 40px;
+}
+p, h6{
+    text-transform: uppercase;
+}
 .wrapper {
     max-width: 1100px;
     width: 100%;
@@ -37,8 +49,8 @@ nav .nav-item {
 }
 
 .small-image{
-    width: 75px;
-    height: 75px;
+    width: 19%;
+    height: 100%;
 }
 .image-box{
     height: 50vh;
@@ -53,6 +65,10 @@ nav .nav-item {
 }
 .article{
     display: flex;
+    height: 23%;
+}
+.article-heading{
+
 }
 .groupProject{
     height: 50%;
@@ -73,9 +89,8 @@ nav .nav-item {
 
 }
 .group6{
-
+    margin-bottom: 5em;
 }
-
 .large-round{
     height: 18vh;
     width: 14vw;
@@ -87,14 +102,6 @@ nav .nav-item {
     align-items: center;
     justify-content: center;
     margin: 1em;
-
-    /*height: 14vh;*/
-    /*width: 11vw;*/
-    /*margin: auto;*/
-    /*text-align: center;*/
-    /*color: white;*/
-    /*border: 5px solid white;*/
-    /*border-radius: 128px;*/
 }
 
 .round{
@@ -151,6 +158,31 @@ nav .nav-item {
     flex-direction: column;
     justify-content: center;
 }
+.image-box-last{
+    display: none;
+}
+.notFirst{
+    display: none;
+}
+.maxViewHeader{
+    display: none;
+}
+.smallHeader{
+    display: flex;
+    justify-content: center;
+}
+@media screen and (min-width: 768px){
+    .notFirst{
+        display: inline-block;
+    }
+    .image-box-last{
+        display: none;
+    }
+    .smallHeader{
+        display: flex;
+        justify-content: flex-start;
+    }
+}
 
 @media screen and (min-width: 992px) {
     .sub-title {text-align: left;}
@@ -164,10 +196,40 @@ nav .nav-item {
         display: flex;
     }
     hr{
-        margin: 0 10vw;
-        height: 0px;
+        margin: 2em 10vw 5em;
+        height: 0;
         width: 100%;
         border: 2px solid grey;
-
+    }
+    .large-round{
+        width: 178px;
+        height: 178px;
+    }
+    .smallHeader{
+        display: flex;
+        justify-content: flex-start;
+    }
+}
+@media screen and (min-width: 993px){
+    .image-box-last{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    .maxViewHeader{
+        display: inline-block;
+    }
+    .headers{
+        display: flex;
+        justify-content: space-between;
+    }
+    .smallHeader{
+        display: flex;
+        justify-content: flex-start;
+    }
+    .article-group{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
     }
 }
