--- a/CSS/codeup-design.css
+++ b/CSS/codeup-design.css
@@ -13,6 +13,7 @@ h1, h2, h3{
 }
 h1{
     font-size: 64px;
+    text-align: center;
 }
 h2{
     font-size: 40px;
@@ -50,7 +51,7 @@ nav .nav-item {
 .icons{
     display: flex;
     justify-content: space-between;
-    width: 25%;
+    width: 35%;
 }
 
 .small-image{
@@ -67,6 +68,7 @@ nav .nav-item {
 .img-description{
     display: flex;
     justify-content: space-between;
+    margin-top: .5em;
 }
 .article{
     display: flex;
@@ -76,7 +78,7 @@ nav .nav-item {
 
 }
 .groupProject{
-    height: 50%;
+    height: 75%;
 }
 .group1{
 
@@ -109,7 +111,7 @@ nav .nav-item {
     height: 178px;
     text-align: center;
     color: white;
-    border: 5px solid white;
+    border: 8px solid white;
     border-radius: 1000px;
     display:flex;
     align-items: center;
@@ -122,11 +124,17 @@ nav .nav-item {
 }
 
 .round{
-    height: 65%;
-    width: 100%;
+    height: 22px;
+    width: 22px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     border: 1px solid #f0f0f0;
     border-radius: 50px;
+}
+span{
+    font-size: 10px;
 }
 .feature{
 
@@ -170,7 +178,9 @@ nav .nav-item {
 .iconsAcrossTop{
     display:flex;
 }
-
+.headers{
+    margin-bottom: 2em;
+}
 .top-header{
     align-items: center;
     display: flex;
@@ -199,8 +209,9 @@ nav .nav-item {
     }
     .smallHeader{
         display: flex;
-        justify-content: flex-start;
+        justify-content: center;
     }
+
     .large-round{
         /*width: 128px;*/
         /*height: 128px;*/
@@ -219,8 +230,11 @@ nav .nav-item {
     .iconsAcrossTop{
         display: flex;
     }
+    .groupProject{
+        height: 50%;
+    }
     hr{
-        margin: 2em 10vw 5em;
+        margin: 2em 6vw 5em;
         height: 0;
         width: 100%;
         border: 2px solid grey;
@@ -237,6 +251,7 @@ nav .nav-item {
         display: flex;
         justify-content: flex-start;
     }
+
 }
 @media screen and (min-width: 993px){
     .image-box-last{
@@ -244,6 +259,7 @@ nav .nav-item {
         flex-direction: column;
         justify-content: space-between;
     }
+
     .large-round{
         flex-shrink: 0;
         /*width: 178px;*/
