added adjustments to the size of the image at the 1200 px range and comments on what to do to finish

--- a/CSS/codeup-design.css
+++ b/CSS/codeup-design.css
@@ -282,3 +282,8 @@ span{
         justify-content: space-between;
     }
 }
+@media screen and (min-width: 1200px){
+    .groupProject{
+        height: 60%;
+    }
+}
