--- a/CSS/codeup-design.css
+++ b/CSS/codeup-design.css
@@ -16,7 +16,7 @@ h1{
     text-align: center;
 }
 h2{
-    font-size: 2rem;
+    font-size: 1.8rem;
 }
 .subHeading{
     white-space: nowrap;
@@ -58,8 +58,8 @@ nav .nav-item {
 }
 
 .small-image{
-    width: 19%;
-    height: 100%;
+    width: 6vw;
+    height: 7vh;
 }
 .image-box{
     height: 50vh;
@@ -82,7 +82,7 @@ nav .nav-item {
 }
 .article-heading{
     margin-left: 4%;
-    font-size: 2.0rem;
+    font-size: 1.8rem;
 }
 .groupProject{
     height: 92%;
@@ -104,7 +104,7 @@ nav .nav-item {
     margin: 0 0 .5em 0;
 }
 .group6{
-    margin: 4em 0;
+    margin: 4em 1em 4em 0;
 }
 .fab{
     margin-right: 1em;
@@ -298,6 +298,9 @@ span{
         margin-top: 1rem;
         margin-right: 10rem;
     }
+    .article-heading{
+        font-size: 3vh;
+    }
 }
 @media screen and (min-width: 1200px){
     .groupProject{
@@ -306,16 +309,9 @@ span{
     .article-group{
         height: 36vh;
     }
-    .article-heading{
-        font-size: 2.3rem;
-    }
 }
 @media screen and (min-width: 1400px){
     .article-group{
         height: 32vh;
-    }
-    .small-image {
-        width: 33%;
-        height: 80%;
     }
 }
